--- a/src/views/layout/main.html
+++ b/src/views/layout/main.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='../../assets/bootstrap-5.2.3-dist/css/bootstrap.min.css' />
+    <link rel="stylesheet" href="../../assets/bootstrap-5.2.3-dist/js/bootstrap.min.js">
     <title>Document</title>
     <link rel='stylesheet' href='/stylesheets/app.css' />
 </head>
